# guess-right-number-of-trees

./: README.md  datacomp-small-with-text-embeddings.urls  download.sh  main.py  pyproject.toml
benchmarks/: Cargo.toml
benchmarks/src/: arroy_bench.rs  dataset.rs  lib.rs  main.rs  qdrant.rs  qdrant_bench.rs  scenarios.rs
results/: 1536_dims.csv  3072_dims.csv  768_dim.csv
