[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
arroy = { git = "https://github.com/meilisearch/arroy", rev = "56b114c" }
# arroy = { path = "../../arroy" }
byte-unit = "5.1.4"
bytemuck = "1.16.1"
clap = { version = "4.5.18", features = ["derive"] }
enum-iterator = "2.1.0"
env_logger = "0.11.6"
fast-distances = "0.0.1"
futures-util = "0.3.30"
heed = "0.21.0"
memmap2 = "0.9.4"
ndarray = "0.16.1"
qdrant-client = "1.11.2"
rand = "0.8.5"
rayon = "1.10.0"
reqwest = { version = "0.12.5", default-features = false, features = ["http2", "rustls-tls"] }
roaring = "0.10.6"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tempfile = "3.10.1"
tokio = { version = "1.38.0", features = ["full"] }
walkdir = "2.5.0"
